# HAMeRS

./: CMakeLists.txt  README.md
include/: HAMeRS_config.hpp  HAMeRS_config.hpp.in
include/flow/convective_flux_reconstructors/: ConvectiveFluxReconstructors.hpp
include/flow/convective_flux_reconstructors/second_order/: ConvectiveFluxReconstructorSecondOrderHLLC.hpp
include/flow/flow_models/: FlowModel.hpp  FlowModelBoundaryUtilities.hpp
include/util/: Directions.hpp
include/util/basic_geometry/: PorousWall.hpp  WallTreatment.hpp
problems/Euler/initial_conditions/: PorousWall2D.cpp  ShockPorousWall.cpp  ShockTube2D.cpp  ShockTube3D.cpp
problems/Navier-Stokes/initial_conditions/: ChannelFlow.cpp  ChannelFlow2D.cpp  PorousWall2D.cpp  PorousWall3D.cpp  ShockTube2D.cpp  ShockTube3D.cpp  Tandem2D.cpp
src/apps/Euler/: Euler.cpp  EulerBoundaryConditions.cpp  EulerInitialConditions.cpp
src/apps/Navier-Stokes/: NavierStokes.cpp  NavierStokesBoundaryConditions.cpp  NavierStokesInitialConditions.cpp
src/flow/convective_flux_reconstructors/: CMakeLists.txt  ConvectiveFluxReconstructorManager.cpp
src/flow/flow_models/: FlowModel.cpp
src/util/: CMakeLists.txt
src/util/basic_boundary_conditions/: BasicCartesianBoundaryUtilities1.cpp  BasicCartesianBoundaryUtilities2.cpp  BasicCartesianBoundaryUtilities3.cpp
src/util/basic_geometry/: CMakeLists.txt  PorousWall.cpp  WallTreatment.cpp
tutorial_01/: DensityWaveAdvection2D.in
tutorial_06/: PorousWall-Euler-O1.in  PorousWall-Euler-WCNS.in  PorousWall.in
tutorial_07/: ShockTube.in
(+14 files in other folders)
